Style on us page and conctac form

--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -143,16 +143,14 @@
           <form>
             <legend><span class="glyphicon glyphicon-globe"></span> Nuestras Oficinas</legend>
             <address>
-              <strong>katerine Diseños.</strong><br>
-              Managua, UA-XXXXX-Y<br>
-              codigo postal, 94107<br>
-              <abbr title="Phone">
-                T:</abbr>
-              (505) 4563-7890
+              <strong>katerine Espinoza | Diseños.</strong><br>
+              Managua, Nicaragua<br>
             </address>
             <address>
               <strong>Nuestro Correo</strong><br>
               <a href="mailto:#">info@katerinespinoza.com</a>
+              <br>
+              <a href="mailto:#">mercado@katerinespinoza.com</a>
             </address>
           </form>
         </div>
