--- a/src/pages/nosotros.html
+++ b/src/pages/nosotros.html
@@ -82,24 +82,24 @@
         </nav>     
       </header>
       <!-- CABECERA DE GALERIA -->
-      <div class="container">
+      <div class="container us-page">
             <p>
-              Katerin Espinoza-Diseños nace en el año 2020 en la plataforma de Nicaragua Diseña identificada a nivel centroamericano como la incubadora del Arte, Diseño y Moda. 
+              <span>K</span>aterin Espinoza-Diseños nace en el año 2020 en la plataforma de Nicaragua Diseña identificada a nivel centroamericano como la incubadora del Arte, Diseño y Moda. 
             </p>
             <p>
-              En el año 2020 a través de una alianza fuimos parte de Nicaragua Diseña 2020 y Chinandega Moda 2020 con la colección de trajes de baños llamada “Tropicana”
+              En el año 2020 a través de una alianza fuimos parte de Nicaragua Diseña 2020 y Chinandega Moda 2020 con la colección de trajes de baños llamada “Tropicana”.
             </p>
             <p>
-              Logramos concretar la marca el año 2021 y producir nuestra primera colección que lleva por nombre Summer Time, bajo la dirección de Katerin Espinoza- Directora General de Katerin Espinoza-Diseños
+              Logramos concretar la marca el año 2021 y producir nuestra primera colección que lleva por nombre Summer Time, bajo la dirección de Katerin Espinoza, Directora General de Katerin Espinoza - Diseños.
             </p>
-            <h3>MISIÓN</h3>
+            <h3 class="subtitle">MISIÓN</h3>
             <p>
               Somos una Marca Nicaragüense dedicada al diseño, corte y confección de cada prenda, agregando a cada atuendo un toque innovador, diferente y moderno.
             </p>
             <P>
               Nuestra misión es hacer sentir a nuestr@s Client@s a través de nuestra marca es confianza, mantener siempre la calidad, comodidad en la adquisición del producto, responsabilidad por nuestra parte, respeto por las inclinaciones y gustos de l@s clientes.
             </P>
-            <h3>VISIÓN:</h3>
+            <h3 class="subtitle">VISIÓN:</h3>
             <P>
               Ser una marca a nivel nacional reconocida por el distingo y originalidad de nuestros conceptos, líder dentro del mercado de la moda hasta alcanzar estándares internacionales manteniendo siempre nuestra esencia e innovando en cada una de las presentaciones de nuestras colecciones.
             </P>
