adding new section of pasarela and andd concept popus and y mas link

--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title></title>
+  <title>Contactenos</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -47,9 +47,12 @@
                 Pasarela
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./nicaraguadisena.html">Nicaragua Diseña Resort San Juan del Sur</a></li>
-                <li><a class="dropdown-item" href="./artemodalEsteli.html">Arte, Moda, Diseño y Muralismo</a></li>
-                <li><a class="dropdown-item" href="./artemodaleon.html">Arte & Moda León</a></li>
+                 <li><a class="dropdown-item" href="./pasarela/edicion2022.html">Nicaragua Diseña Edici&oacuten 2022</a></li>
+                    <li><a class="dropdown-item" href="./pasarela/edicion2021.html">Nicaragua Diseña Edici&oacuten 2021</a></li>
+                    <li><a class="dropdown-item" href="./pasarela/ediciongranada.html">Nicaragua Diseña Edici&oacuten Granada</a></li>
+                    <li><a class="dropdown-item" href="./pasarela/nicaraguadisena.html">Nicaragua Diseña Resort San Juan del Sur</a></li>
+                    <li><a class="dropdown-item" href="./pasarela/artemodalEsteli.html">Arte, Moda, Diseño y Muralismo</a></li>
+                    <li><a class="dropdown-item" href="./pasarela/artemodaleon.html">Arte & Moda León</a></li>
               </ul>
             </li>
 
@@ -59,7 +62,8 @@
                 Colecciones
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./summerTime.html">Summer Time</a></li>
+                <li><a class="dropdown-item" href="./colecciones/summerTime.html">Summer Time</a></li>
+                <li><a class="dropdown-item" href="./colecciones/metamorfosis.html">Metamorfosis</a></li>
               </ul>
             </li>
 
