update endpoints on missteen and metamorfosis pages

--- a/src/pages/colecciones/metamorfosis.html
+++ b/src/pages/colecciones/metamorfosis.html
@@ -52,6 +52,9 @@
                   Pasarela
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="../pasarela/edicion2022.html">Nicaragua Diseña Edici&oacuten 2022</a></li>
+                    <li><a class="dropdown-item" href="../pasarela/edicion2021.html">Nicaragua Diseña Edici&oacuten 2021</a></li>
+                    <li><a class="dropdown-item" href="../pasarela/ediciongranada.html">Nicaragua Diseña Edici&oacuten Granada</a></li>
                     <li><a class="dropdown-item" href="../pasarela/nicaraguadisena.html">Nicaragua Diseña Resort San Juan del Sur</a></li>
                     <li><a class="dropdown-item" href="../pasarela/artemodalEsteli.html">Arte, Moda, Diseño y Muralismo</a></li>
                     <li><a class="dropdown-item" href="../pasarela/artemodaleon.html">Arte & Moda León</a></li>
