--- a/src/pages/colecciones/missteen.html
+++ b/src/pages/colecciones/missteen.html
@@ -33,15 +33,16 @@
 
     <div class="container-fluid">
       <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top ">
           <a href="#" class="navbar-brand">
-            <canvas id="canvas" width="150" height="120"></canvas>
+            <!-- <canvas id="canvas" width="150" height="120"></canvas> -->
+            <img class="card-img-bottom" src="../../img/front/logoKaterine.png" alt="logo katherin"> 
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span><i class="fas fa-bars"></i>
         </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        
+          <div class="menu collapse navbar-collapse ms-5" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
@@ -52,9 +53,9 @@
                   Pasarela
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="../pasarela/edicion2022.html">Nicaragua Diseña Edici&oacuten 2022</a></li>
-                    <li><a class="dropdown-item" href="../pasarela/edicion2021.html">Nicaragua Diseña Edici&oacuten 2021</a></li>
-                    <li><a class="dropdown-item" href="../pasarela/ediciongranada.html">Nicaragua Diseña Edici&oacuten Granada</a></li>
+                    <li><a class="dropdown-item" href="../pasarela/edicion2021.html">Nicaragua Diseña Edición  2021</a></li>
+                  <li><a class="dropdown-item active" href="../pasarela/edicion2020.html">Nicaragua Diseña Edición 2020</a></li>
+                    <li><a class="dropdown-item" href="../pasarela/ediciongranada.html">Nicaragua Diseña Edición  Granada</a></li>
                     <li><a class="dropdown-item" href="../pasarela/nicaraguadisena.html">Nicaragua Diseña Resort San Juan del Sur</a></li>
                     <li><a class="dropdown-item" href="../pasarela/artemodalEsteli.html">Arte, Moda, Diseño y Muralismo</a></li>
                     <li><a class="dropdown-item" href="../pasarela/artemodaleon.html">Arte & Moda León</a></li>
@@ -89,6 +90,8 @@
 
       <!-- CABECERA DE GALERIA -->
       <div class="container">
+        <h3 class="text-center display-6">DISEÑO DE TRAJE DE BAÑO DE MISS TEEN NICARAGUA 2020</h3>
+        <p class="lead text-center"><b>Katerin Espinoza Diseños</b>, tuvo la importante labor en el 2021 de diseñar y confeccionar el traje de baño de Miss Teen Nicaragua 2020,<b> Gladys Molina</b>, quien representó al país en Perú en el Certamen Miss Teen Model Internacional, donde quedó como Finalista.</p>
         <div id="mainPhotoParent" class="row my-gallery d-flex justify-content-between">
           <!-- Section Photo Galleries -->
         </div>
@@ -160,7 +163,7 @@
 
     </div>
 
-    <footer>
+    <footer class="mt-5">
         <ul class="redesSociales">
           <li><a href="https://wa.me/50589946451"><i class="fab fa-whatsapp"></i></a></li>
           <li><a href="https://www.instagram.com/katerin_disenos.ni/?hl=es"><i class="fab fa-instagram"></i></a></li>
