--- a/src/pages/colecciones/summerTime.html
+++ b/src/pages/colecciones/summerTime.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Coleccion Summer Time</title>
+    <title>Colección Summer Time</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -32,18 +32,18 @@
 
     <div class="container-fluid">
       <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top ">
           <a href="#" class="navbar-brand">
-            <canvas id="canvas" width="150" height="120"></canvas>
+            <img class="card-img-bottom" src="../../img/front/logoKaterine.png" alt="logo katherin"> 
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span><i class="fas fa-bars"></i>
         </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        
+          <div class="menu collapse navbar-collapse ms-5" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../../index.html">Inicio</a>
               </li>
 
               <li class="nav-item dropdown">
@@ -51,9 +51,9 @@
                   Pasarela
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <li><a class="dropdown-item" href="../pasarela/edicion2022.html">Nicaragua Diseña Edici&oacuten 2022</a></li>
-                    <li><a class="dropdown-item" href="../pasarela/edicion2021.html">Nicaragua Diseña Edici&oacuten 2021</a></li>
-                    <li><a class="dropdown-item" href="../pasarela/ediciongranada.html">Nicaragua Diseña Edici&oacuten Granada</a></li>
+                 <li><a class="dropdown-item" href="../pasarela/edicion2021.html">Nicaragua Diseña Edición  2021</a></li>
+                  <li><a class="dropdown-item" href="../pasarela/edicion2020.html">Nicaragua Diseña Edición 2020</a></li>
+                    <li><a class="dropdown-item" href="../pasarela/ediciongranada.html">Nicaragua Diseña Edición  Granada</a></li>
                     <li><a class="dropdown-item" href="../pasarela/nicaraguadisena.html">Nicaragua Diseña Resort San Juan del Sur</a></li>
                     <li><a class="dropdown-item" href="../pasarela/artemodalEsteli.html">Arte, Moda, Diseño y Muralismo</a></li>
                     <li><a class="dropdown-item" href="../pasarela/artemodaleon.html">Arte & Moda León</a></li>
@@ -65,8 +65,8 @@
                   Colecciones
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./summerTime.html">Summer Time</a></li>
-                    <li><a class="dropdown-item" href="./metamorfosis.html">Metamorfosis</a></li>
+                    <li><a class="dropdown-item active" href="./summerTime.html">Colección Summer Time</a></li>
+                    <li><a class="dropdown-item" href="./metamorfosis.html">Colección Metamorfosis</a></li>
                  </ul>
              </li>
 
@@ -76,6 +76,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="../contacto.html">Contacto</a>
               </li>
+            </ul> 
             </div>
             <form class="d-flex d-none d-lg-block">
               <div class="input-group mb-3">
@@ -159,7 +160,7 @@
 
     </div>
 
-    <footer>
+    <footer class="mt-5">
         <ul class="redesSociales">
           <li><a href="https://wa.me/50589946451"><i class="fab fa-whatsapp"></i></a></li>
           <li><a href="https://www.instagram.com/katerin_disenos.ni/?hl=es"><i class="fab fa-instagram"></i></a></li>
