--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -26,19 +26,18 @@
 
   <div class="container-fluid">
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <a href="#" class="navbar-brand">
-          <canvas id="canvas" width="150" height="120"></canvas>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <nav class="navbar navbar-expand-lg fixed-top ">
+          <a href="#" class="navbar-brand">
+            <img class="card-img-bottom" src="../img/front/logoKaterine.png" alt="logo katherin"> 
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span><i class="fas fa-bars"></i>
         </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        
+          <div class="menu collapse navbar-collapse ms-5" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -47,9 +46,9 @@
                 Pasarela
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                 <li><a class="dropdown-item" href="./pasarela/edicion2022.html">Nicaragua Diseña Edici&oacuten 2022</a></li>
-                    <li><a class="dropdown-item" href="./pasarela/edicion2021.html">Nicaragua Diseña Edici&oacuten 2021</a></li>
-                    <li><a class="dropdown-item" href="./pasarela/ediciongranada.html">Nicaragua Diseña Edici&oacuten Granada</a></li>
+                <li><a class="dropdown-item" href="./pasarela/edicion2021.html">Nicaragua Diseña Edición  2021</a></li>
+                  <li><a class="dropdown-item" href="./pasarela/edicion2020.html">Nicaragua Diseña Edición 2020</a></li>
+                    <li><a class="dropdown-item" href="./pasarela/ediciongranada.html">Nicaragua Diseña Edición  Granada</a></li>
                     <li><a class="dropdown-item" href="./pasarela/nicaraguadisena.html">Nicaragua Diseña Resort San Juan del Sur</a></li>
                     <li><a class="dropdown-item" href="./pasarela/artemodalEsteli.html">Arte, Moda, Diseño y Muralismo</a></li>
                     <li><a class="dropdown-item" href="./pasarela/artemodaleon.html">Arte & Moda León</a></li>
@@ -71,7 +70,7 @@
               <a class="nav-link" href="./nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link active" href="./contacto.html">Contacto</a>
             </li>
         </div>
         <form class="d-flex d-none d-lg-block">
